--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 				transform: translate(-50%, -50%);
 				color: white;
 				font-family: "Courier New", Courier, monospace;
+				-webkit-user-select: none; /* Safari */
+				-moz-user-select: none; /* Firefox */
+				-ms-user-select: none; /* IE10+/Edge */
+				user-select: none; /* Standard */
 			}
 		</style>
 	</head>
