--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>penis</title>
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<style>
 			body {
 				opacity: 0;
