--- a/URLs.html
+++ b/URLs.html
@@ -39,6 +39,7 @@
 			https://nekonyan.fun/random-html-test/timetable-schedule.html
 			https://nekonyan.fun/Text-to-Morse/Morse-to-Text.html
 			https://nekonyan.fun/Text-to-Morse/Text-to-Morse.html
+			https://nekonyan.fun/Text-to-Morse/readme.txt
 			https://nekonyan.fun/Editable-CSS/plain
 			https://nekonyan.fun/Editable-CSS/fullscreen
 			https://nekonyan.fun/robots.txt
@@ -206,6 +207,11 @@
 		<p>
 			<a href="https://nekonyan.fun/Text-to-Morse/Text-to-Morse.html">
 				https://nekonyan.fun/Text-to-Morse/Text-to-Morse.html
+			</a>
+		</p>
+		<p>
+			<a href="https://nekonyan.fun/Text-to-Morse/readme.txt">
+				https://nekonyan.fun/Text-to-Morse/readme.txt
 			</a>
 		</p>
 		<p>
