--- a/URLs.html
+++ b/URLs.html
@@ -30,6 +30,7 @@
 			https://nekonyan.fun/my-web/
 			https://nekonyan.fun/nlngay/
 			https://nekonyan.fun/penis/
+			https://nekonyan.fun/CV/
 			https://nekonyan.fun/random-html-test/
 			https://nekonyan.fun/xero-dracul-git/
 			https://naughtylittlegays.nekonyan.fun/hello-world/
@@ -160,6 +161,11 @@
 		<p>
 			<a href="https://nekonyan.fun/penis/">
 				https://nekonyan.fun/penis/
+			</a>
+		</p>
+		<p>
+			<a href="https://nekonyan.fun/CV/">
+				https://nekonyan.fun/CV/
 			</a>
 		</p>
 		<p>
